--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -1,10 +1,9 @@
 *{
   box-sizing: border-box;
-  font-family: Rubik,sans-serif;
-  direction: rtl;
+  margin: 0;
+  padding: 0;
 }
 body{
-  margin:0;
   font-size: 1rem;
   background-color: #f9f9f9;
 }
@@ -12,4 +11,18 @@ body{
   text-decoration: none;
   color:white;
   margin: 0 1rem;
+}
+button{
+  position: relative;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+  display: inline-flex;
+  min-width: 8rem;
+  padding: 0 1.2rem;
+  justify-content: center;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: bottom;
+  white-space: nowrap;
 }
