--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,7 +1,83 @@
 .header{
-  background: #fff;
-  height: 7.2rem;
-  padding: 0 2.4rem;
+  display: flex;
+  align-items: center;
+  padding: 0.4rem  2.4rem;
   position: relative;
   z-index: 1010;
+}
+.header-container{
+  display: block;
+  box-shadow: 0 2px 4px rgba(0 ,0 ,0 , 0.08), 0 4px 12px rgba(0 ,0 ,0 , 0.08);
+}
+.udemy-logo{
+  width: 91px;
+  vertical-align: middle;
+}
+.categories-button{
+  background-color: transparent;
+  min-width: auto;
+}
+.search-bar-header{
+  display: flex;
+  align-items: center;
+  background: #fff;
+  margin-left: 1rem;
+}
+.searchbar-header-input{
+  background-color: transparent;
+  border: 0;
+  flex: 1;
+  height: 3rem;
+  margin-left: 1rem;
+}
+.svg-search-icon{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+}
+.search-bar{
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 2.4rem 0 0;
+  margin-left: 1rem;
+}
+.button-logo{
+  min-width: 0;
+  padding: 0;
+}
+.search-bar-container{
+  background: #fff;
+  flex-grow: 1;
+  border:1px solid #1c1d1f;
+  border-radius: 25px;
+}
+.pop-up{
+  font-size: 0.9rem;
+  padding: 0 1.2rem;
+  color:$myBlack;
+  cursor: pointer;
+  position: relative;
+  height: 3.6rem;
+  line-height: 4;
+}
+.pop-up-span:hover{
+  color: $myPurple;
+}
+.header-button{
+  height: 2.6rem;
+  border: 1px solid;
+  min-width: 4rem;
+  border-color: $myBlack;
+  margin-left: 0.4rem;
+  font-weight: bold;
+  display: inline-block;
+}
+.login{
+  background: white;
+}
+.sign-up{
+  color: white;
+  background: $myBlack;
 }
