--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,4 +2,5 @@
 @import './base/settings.scss';
 @import './components/header.scss';
 @import './components/footer.scss';
-
+@import './components/modal.scss';
+@import './components/login-page.scss';
