added header options when user is logged in, and made sure that users can now log in, out as well as the cookie management.

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -81,3 +81,29 @@
   color: white;
   background: $myBlack;
 }
+.logo{
+  width: 24px;
+  height:24px;
+  background: transparent;
+  margin-right: 0.8rem;
+  cursor: pointer;
+}
+.online-headers{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user-area{
+  background: #1c1d1f;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  object-fit: cover;
+  color: #fff;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.8rem;
+  position: relative;
+  cursor: pointer;
+}
