--- a/src/styles/components/login-page.scss
+++ b/src/styles/components/login-page.scss
@@ -2,6 +2,18 @@
   width: 380px;
   margin: 24px auto;
   max-width: 100%;
+  input{
+    color: #1c1d1f;
+    font-size: 18px;
+    height: auto;
+    padding: 11px 45px 12px 40px;
+    margin-bottom: 8px;
+    width: 100%;
+    position: relative;
+  }
+}
+.login-content{
+  padding: 24px 24px 16px;
 }
 .login-title{
   border-bottom: solid 1px #d1d7dc;
@@ -12,4 +24,70 @@
   padding: 24px 64px 24px 24px;
   margin-top: 0;
   margin-bottom: 0;
+}
+.continue-with{
+  box-shadow: 0 2px 2px 0 rgba(28 ,29 ,31 , 0.24), 0 0 2px 0 rgba(28 ,29 ,31 , 0.12);
+  font-size: 16px;
+  border: 1px solid #d1d7dc;
+  font-weight: 700;
+  height: 48px;
+  margin-bottom: 8px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.social-icon{
+  padding: 0;
+  height: 24px;
+  width: 48px;
+}
+.social-icon .fb rect{
+  fill:var(--FBblue,#3b5998);
+}
+.google{
+  height: 40px;
+  margin-bottom: 12px;
+}
+.social-icon .fb path{
+  fill:var(--FBwhite,white)
+}
+.continue-with:hover{
+  cursor: pointer;
+  background: #f1f1f5;
+}
+.login-button{
+  background: #a435f0;
+  font-size: 16px;
+  font-weight: 700;
+  height: 48px;
+  margin-bottom: 16px;
+  width: 100%;
+  color: #fff;
+}
+.forgot-pw, .diff-account{
+    color: $myPurple;
+    cursor: pointer;
+    margin-top: 12px;
+}
+.submit-row{
+  text-align: center;
+}
+.login-sign-up{
+  margin-top: 12px;
+  font-weight: bold;
+  color: $myPurple;
+}
+.margin-top{
+  margin-top: 22px;
+}
+.welcome-back-container{
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  span{
+    margin-top: 0.4rem;
+  }
 }
