--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,4 +1,31 @@
 .footer{
   width: 100vw;
   background: $myBlack;
+  color: #fff;
+}
+.footer-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  border-top: 1px solid #3e4143;
+  padding: 1.2rem 4.4rem;
+  img{
+    margin: 1.2rem 0.4rem;
+    vertical-align: middle;
+  }
+}
+.footer-text{
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -.02rem;
+  font-size: 1.2rem;
+  min-width: 40rem;
+  flex: 1;
+  padding: 1.2rem 2.4rem 1.2rem 0;
+  a{
+    color: $myPink;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
