--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -21,12 +21,14 @@
   display: flex;
   align-items: center;
   background: #fff;
+  width: 100%;
   margin-left: 1rem;
 }
 .searchbar-header-input{
   background-color: transparent;
   border: 0;
   flex: 1;
+  width: 100%;
   height: 3rem;
   margin-left: 1rem;
 }
