--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,4 @@
 @import './components/footer.scss';
 @import './components/modal.scss';
 @import './components/login-page.scss';
+@import './components/home.scss';
