--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -4,6 +4,7 @@
   padding: 0.4rem  2.4rem;
   position: relative;
   z-index: 1010;
+  border-bottom: 1px solid #d1d7dc;
 }
 .header-container{
   display: block;
@@ -94,18 +95,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.user-area{
-  background: #1c1d1f;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  object-fit: cover;
-  color: #fff;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.8rem;
-  position: relative;
-  cursor: pointer;
 }
